fix: prevent crashes when switching mode left to right/rename sample_fluter_app to ColorCompass

--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "sample_flutter_app",
+  "appTitle": "ColorCompass",
   "@appTitle": {
     "description": "The title of the application"
   }
